fixed scroll cutoff

--- a/style.css
+++ b/style.css
@@ -86,10 +86,12 @@
     width: 49%;
     background-color: #cccccc;
     padding: 10px 100px;
-    overflow: hidden;
+    overflow: visible;
     display: inline-block;
-    height: 95vh;
+    /* height: auto; */
     border-radius: 25px;
+    margin-bottom: 30px;
+    min-height: 100vh;
 }
 
 .input-section {
